--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
-Hi
+<!DOCTYPE HTML>
+<html>
+<head>
+    <title>Richard Huynh</title>
+    <link rel="stylesheet" href="css/main.min.css">
+</head>
+<body>
+    <div style="width:100px;
+                position:fixed; 
+                top:calc(50% - 70px);
+                left:calc(50% - 50px);"
+         >
+        <svg id="richh-logo" data-name="richh-logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 78.07 95.87">
+            <title>richh-logo</title>
+            <path d="M11,5V77c0,3.86,6,3.87,6,0V5c0-3.86-6-3.87-6,0h0Z" transform="translate(-10.96 -2.06)" />
+            <path d="M53,95V23c0-3.86-6-3.87-6,0V95c0,3.86,6,3.87,6,0h0Z" transform="translate(-10.96 -2.06)" />
+            <path d="M83,5V77c0,3.86,6,3.87,6,0V5c0-3.86-6-3.87-6,0h0Z" transform="translate(-10.96 -2.06)" />
+            <path d="M51.51,61.59l36-18c3.45-1.73.42-6.9-3-5.18l-36,18c-3.45,1.73-.42,6.9,3,5.18h0Z" transform="translate(-10.96 -2.06)" />
+            <path d="M12.49,43.59l36,18c3.44,1.72,6.49-3.45,3-5.18l-36-18c-3.44-1.72-6.49,3.45-3,5.18h0Z" transform="translate(-10.96 -2.06)" />
+            <path d="M12.49,7.59l36,18c3.44,1.72,6.49-3.45,3-5.18l-36-18c-3.44-1.72-6.49,3.45-3,5.18h0Z" transform="translate(-10.96 -2.06)" />
+            <path d="M84.49,2.41l-36,18c-3.45,1.73-.42,6.9,3,5.18l36-18c3.45-1.73.42-6.9-3-5.18h0Z" transform="translate(-10.96 -2.06)" />
+            <path d="M15.51,43.59l36-18c3.45-1.73.42-6.9-3-5.18l-36,18c-3.45,1.73-.42,6.9,3,5.18h0Z" transform="translate(-10.96 -2.06)" />
+            <path d="M12.49,79.59l36,18c3.44,1.72,6.49-3.45,3-5.18l-36-18c-3.44-1.72-6.49,3.45-3,5.18h0Z" transform="translate(-10.96 -2.06)" />
+            <path d="M84.49,74.41l-36,18c-3.45,1.73-.42,6.9,3,5.18l36-18c3.45-1.73.42-6.9-3-5.18h0Z" transform="translate(-10.96 -2.06)" />
+        </svg>
+    </div>
+</body>
+
+
+
+</html>
