--- a/index.html
+++ b/index.html
@@ -10,19 +10,11 @@
                 top:calc(50% - 70px);
                 left:calc(50% - 50px);"
          >
-        <svg id="richh-logo" data-name="richh-logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 78.07 95.87">
-            <title>richh-logo</title>
-            <path d="M11,5V77c0,3.86,6,3.87,6,0V5c0-3.86-6-3.87-6,0h0Z" transform="translate(-10.96 -2.06)" />
-            <path d="M53,95V23c0-3.86-6-3.87-6,0V95c0,3.86,6,3.87,6,0h0Z" transform="translate(-10.96 -2.06)" />
-            <path d="M83,5V77c0,3.86,6,3.87,6,0V5c0-3.86-6-3.87-6,0h0Z" transform="translate(-10.96 -2.06)" />
-            <path d="M51.51,61.59l36-18c3.45-1.73.42-6.9-3-5.18l-36,18c-3.45,1.73-.42,6.9,3,5.18h0Z" transform="translate(-10.96 -2.06)" />
-            <path d="M12.49,43.59l36,18c3.44,1.72,6.49-3.45,3-5.18l-36-18c-3.44-1.72-6.49,3.45-3,5.18h0Z" transform="translate(-10.96 -2.06)" />
-            <path d="M12.49,7.59l36,18c3.44,1.72,6.49-3.45,3-5.18l-36-18c-3.44-1.72-6.49,3.45-3,5.18h0Z" transform="translate(-10.96 -2.06)" />
-            <path d="M84.49,2.41l-36,18c-3.45,1.73-.42,6.9,3,5.18l36-18c3.45-1.73.42-6.9-3-5.18h0Z" transform="translate(-10.96 -2.06)" />
-            <path d="M15.51,43.59l36-18c3.45-1.73.42-6.9-3-5.18l-36,18c-3.45,1.73-.42,6.9,3,5.18h0Z" transform="translate(-10.96 -2.06)" />
-            <path d="M12.49,79.59l36,18c3.44,1.72,6.49-3.45,3-5.18l-36-18c-3.44-1.72-6.49,3.45-3,5.18h0Z" transform="translate(-10.96 -2.06)" />
-            <path d="M84.49,74.41l-36,18c-3.45,1.73-.42,6.9,3,5.18l36-18c3.45-1.73.42-6.9-3-5.18h0Z" transform="translate(-10.96 -2.06)" />
-        </svg>
+        
+    <svg id="richh-logo" data-name="richh-logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 173.82 173.84">
+    	<title>rh-logo</title>
+    	<path d="M162,87c-0.26,31-19.67,59.81-49.1,70.43a75.94,75.94,0,0,1-83.8-22.7C8.91,110.6,6.6,75,22.8,48.2S71.19,7.14,101.9,13.47C136.69,20.64,161.7,51.62,162,87c0.07,7.72,12.07,7.74,12,0A88.08,88.08,0,0,0,116.72,5.23c-34-12.61-74.08-1.6-96.93,26.57s-26.25,68.75-7.35,100,55.64,47.27,91.31,40.52C144.33,164.69,173.65,127.9,174,87,174.07,79.28,162.07,79.27,162,87Z" transform="translate(-0.18 -0.05)"/><path d="M120.48,82.68l-36,18c-5.76,2.88-.7,11.51,5,8.63l36-18c5.76-2.88.7-11.51-5-8.63h0Z" transform="translate(-0.18 -0.05)"/><path d="M82,33V141c0,6.43,10,6.45,10,0V33c0-6.43-10-6.45-10,0h0Z" transform="translate(-0.18 -0.05)"/><path d="M48.48,91.32l36,18c5.74,2.87,10.81-5.75,5-8.63l-36-18c-5.74-2.87-10.81,5.75-5,8.63h0Z" transform="translate(-0.18 -0.05)"/><path d="M118,51v72c0,6.43,10,6.45,10,0V51c0-6.43-10-6.45-10,0h0Z" transform="translate(-0.18 -0.05)"/><path d="M46,51v72c0,6.43,10,6.45,10,0V51c0-6.43-10-6.45-10,0h0Z" transform="translate(-0.18 -0.05)"/><path d="M84.48,28.68l-36,18c-5.76,2.88-.7,11.51,5,8.63l36-18c5.76-2.88.7-11.51-5-8.63h0Z" transform="translate(-0.18 -0.05)"/><path d="M82,33V69c0,6.43,10,6.45,10,0V33c0-6.43-10-6.45-10,0h0Z" transform="translate(-0.18 -0.05)"/><path d="M84.48,64.68l-36,18c-5.76,2.88-.7,11.51,5,8.63l36-18c5.76-2.88.7-11.51-5-8.63h0Z" transform="translate(-0.18 -0.05)"/>
+    	</svg>
     </div>
 </body>
 
