--- a/index.html
+++ b/index.html
@@ -1,30 +1,87 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <title>Richard Huynh</title>
-    <link rel="stylesheet" href="css/main.min.css">
+	<title>Richard Huynh</title>
+	<link href='https://fonts.googleapis.com/css?family=Josefin+Sans' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" href="css/normalize.css">
+	<link rel="stylesheet" href="css/main.min.css">
+	<script src="js/vendor/jquery.min.js"></script>
+	<script src="js/app.js"></script>
 </head>
 <body>
-    <div style="width:100px;
-                position:fixed; 
-                top:calc(50% - 70px);
-                left:calc(50% - 50px);"
-         >
-        <svg id="richh-logo" data-name="richh-logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 78.07 95.87">
-            <title>richh-logo</title>
-            <path d="M11,5V77c0,3.86,6,3.87,6,0V5c0-3.86-6-3.87-6,0h0Z" transform="translate(-10.96 -2.06)" />
-            <path d="M53,95V23c0-3.86-6-3.87-6,0V95c0,3.86,6,3.87,6,0h0Z" transform="translate(-10.96 -2.06)" />
-            <path d="M83,5V77c0,3.86,6,3.87,6,0V5c0-3.86-6-3.87-6,0h0Z" transform="translate(-10.96 -2.06)" />
-            <path d="M51.51,61.59l36-18c3.45-1.73.42-6.9-3-5.18l-36,18c-3.45,1.73-.42,6.9,3,5.18h0Z" transform="translate(-10.96 -2.06)" />
-            <path d="M12.49,43.59l36,18c3.44,1.72,6.49-3.45,3-5.18l-36-18c-3.44-1.72-6.49,3.45-3,5.18h0Z" transform="translate(-10.96 -2.06)" />
-            <path d="M12.49,7.59l36,18c3.44,1.72,6.49-3.45,3-5.18l-36-18c-3.44-1.72-6.49,3.45-3,5.18h0Z" transform="translate(-10.96 -2.06)" />
-            <path d="M84.49,2.41l-36,18c-3.45,1.73-.42,6.9,3,5.18l36-18c3.45-1.73.42-6.9-3-5.18h0Z" transform="translate(-10.96 -2.06)" />
-            <path d="M15.51,43.59l36-18c3.45-1.73.42-6.9-3-5.18l-36,18c-3.45,1.73-.42,6.9,3,5.18h0Z" transform="translate(-10.96 -2.06)" />
-            <path d="M12.49,79.59l36,18c3.44,1.72,6.49-3.45,3-5.18l-36-18c-3.44-1.72-6.49,3.45-3,5.18h0Z" transform="translate(-10.96 -2.06)" />
-            <path d="M84.49,74.41l-36,18c-3.45,1.73-.42,6.9,3,5.18l36-18c3.45-1.73.42-6.9-3-5.18h0Z" transform="translate(-10.96 -2.06)" />
-        </svg>
-    </div>
+
+	<div id="header">
+		<div class="container">
+			<div class="nav">
+				<div class="logo">
+					<svg id="Layer_6" data-name="Layer 6" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 69.12 68.97">
+						<defs>
+							<style>
+								.cls-1 {
+									fill: none;
+								}
+							</style>
+						</defs>
+						<title>rh-logo</title>
+						<path d="M34.68,3.73L67.85,17.27c1.79,0.73,2.56-2.17.8-2.89L35.48,0.84c-1.79-.73-2.56,2.17-0.8,2.89h0Z" transform="translate(-0.52 -0.72)" />
+						<path d="M35.48,66.68L2.31,53.14C0.53,52.41-.25,55.31,1.52,56L34.68,69.58c1.79,0.73,2.56-2.17.8-2.89h0Z" transform="translate(-0.52 -0.72)" />
+						<polygon class="cls-1" points="5.48 5.28 34.48 5.28 63.48 17.11 63.48 63.28 34.62 63.69 5.55 51.61 5.48 5.28" />
+						<path d="M50.45,33.33L34.5,39.84c-2.2.9-1.24,4.53,1,3.62l15.94-6.51c2.2-.9,1.24-4.53-1-3.62h0Z" transform="translate(-0.52 -0.72)" />
+						<path d="M33.13,15.6V54.67a1.88,1.88,0,0,0,3.75,0V15.6a1.88,1.88,0,0,0-3.75,0h0Z" transform="translate(-0.52 -0.72)" />
+						<path d="M18.56,36.94L34.5,43.45c2.23,0.91,3.2-2.71,1-3.62L19.55,33.33c-2.23-.91-3.2,2.71-1,3.62h0Z" transform="translate(-0.52 -0.72)" />
+						<path d="M49.07,22.12v26a1.88,1.88,0,0,0,3.75,0v-26a1.88,1.88,0,0,0-3.75,0h0Z" transform="translate(-0.52 -0.72)" />
+						<path d="M17.18,22.12v26a1.88,1.88,0,0,0,3.75,0v-26a1.88,1.88,0,0,0-3.75,0h0Z" transform="translate(-0.52 -0.72)" />
+						<path d="M34.5,13.8L18.56,20.31c-2.2.9-1.24,4.53,1,3.62L35.5,17.41c2.2-.9,1.24-4.53-1-3.62h0Z" transform="translate(-0.52 -0.72)" />
+						<path d="M33.13,15.6v13a1.88,1.88,0,0,0,3.75,0v-13a1.88,1.88,0,0,0-3.75,0h0Z" transform="translate(-0.52 -0.72)" />
+						<path d="M34.5,26.82L18.56,33.33c-2.2.9-1.24,4.53,1,3.62L35.5,30.43c2.2-.9,1.24-4.53-1-3.62h0Z" transform="translate(-0.52 -0.72)" />
+					</svg>
+				</div>
+				<div class="intro">
+					I am Richard Huynh. <br />
+					I am a designer/developer.
+				</div>
+			</div>
+		</div>
+	</div>
+	<div id="main">
+		<div class="container">
+			<div id="work">
+				<h1>Work</h1>
+			</div>
+		</div>
+	</div>
+
+	<!--Templates-->
+	<div id="templateContainer" class="hidden">
+		<div id="thumbTemplate">
+			<div class="thumb" data-id="[[id]]">
+				<img src="[[thumb]]" />
+				<div class="overlay" style="background:[[overlay]];">
+					<div class="overlay-text">[[tagline]]</div>
+				</div>
+			</div>
+		</div>
+
+		<div id="workOverlayTemplate">
+			<div class="thumb-pointer" data-column="[[column]]"></div>
+			<div class="detail">
+				<div class="text">
+					<h1>[[name]]</h1>
+					<p>[[description]]</p>
+					<p>[[skills]]</p>
+				</div>
+				<div class="slides">
+					[[slides]]
+				</div>
+			</div>
+		</div>
+	</div>
+
 </body>
+
+
+
+
 
 
 
