--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 					</svg>
 				</div>
 				<div class="intro">
-					I am Richard Huynh. <br />
-					I am a designer/developer.
+					Richard Huynh <br />
+					Designer/Developer
 				</div>
 			</div>
 		</div>
@@ -45,7 +45,6 @@
 	<div id="main">
 		<div class="container">
 			<div id="work">
-				<h1>Work</h1>
 			</div>
 		</div>
 	</div>
