Add website and date

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 	<title>Richard Huynh</title>
-	<link href='https://fonts.googleapis.com/css?family=Josefin+Sans' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Open+Sans:300,300italic' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/main.min.css">
 	<script src="js/vendor/jquery.min.js"></script>
@@ -67,6 +68,7 @@
 					<h1>[[name]]</h1>
 					<p>[[description]]</p>
 					<p>[[skills]]</p>
+					<p>[[date]]</p>
 				</div>
 				<div class="slides">
 					[[slides]]
@@ -74,5 +76,7 @@
 			</div>
 		</div>
 	</div>
+
+
 </body>
 </html>
