--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 				</div>
 				<div class="intro">
 					Richard Huynh <br />
-					Designer/Developer
+					Creator of Sorts
 				</div>
 			</div>
 		</div>
