--- a/index.html
+++ b/index.html
@@ -2,80 +2,36 @@
 <html>
 <head>
 	<title>Richard Huynh</title>
-	<link href='https://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
-	<link href='https://fonts.googleapis.com/css?family=Open+Sans:300,300italic' rel='stylesheet' type='text/css'>
+	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/main.min.css">
+	<script src="https://use.typekit.net/zbq4daq.js"></script>
+	<script>try{Typekit.load({ async: true });}catch(e){}</script>
 	<script src="js/vendor/jquery.min.js"></script>
+	<script src="js/vendor/three.js"></script>
+	<script src="js/renderModel.js"></script>
+	<script src="js/animate.js"></script>
 	<script src="js/app.js"></script>
 </head>
 <body>
-	<div id="header">
+	<header>
 		<div class="container">
-			<div class="nav">
-				<div class="logo">
-
-
-					<svg id="Layer_6" data-name="Layer 6" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 25.53 26.25">
-						<defs>
-							<style>
-								.cls-1 {
-									fill: none;
-									stroke: #000;
-									stroke-miterlimit: 10;
-									stroke-width: 0.5px;
-								}
-							</style>
-						</defs>
-						<title>rh-logo-circle</title>
-						<path class="cls-1" d="M23.47,6.28a12.52,12.52,0,0,1-2.11,15.59" transform="translate(-0.01 0)" />
-						<path class="cls-1" d="M0.57,15.54A12.52,12.52,0,0,1,19.26,2.07" transform="translate(-0.01 0)" />
-						<path class="cls-1" d="M14.06,25.22a12.66,12.66,0,0,1-1.29.07A12.49,12.49,0,0,1,3.26,20.9" transform="translate(-0.01 0)" />
-						<path d="M13.73,6.07C14.65,3.3,13.51,2.6,12,2.32S8.85,1.94,8.25,3.93A41.61,41.61,0,0,1,6.13,11c-1.37,3.19-2.68,7-3.93,6.56s-1.12-1.36-1.67-1-0.6,4.32.93,4.32,3.44-3.23,4.28-5.1S7.29,11.64,8,11.08c0.46-.36.85-0.32,1.2,0.53,0.25,0.6-.59,5.19-1.88,8s3.76,2.27,4.22,2c0.82-.57,1.21-1.7.46-1.57s-3.17.34-2.51-1.23,2.27-6.42,1.4-8c-0.5-.91-1-0.85-0.69-1.06A6.16,6.16,0,0,0,13.73,6.07ZM8.81,8.76C9,8.14,9.69,5.91,9.9,5s0.88-1.17,1.49-.67c0.91,0.74.2,1.91-.51,2.9S8.75,9,8.81,8.76Z" transform="translate(-0.01 0)" />
-						<path d="M14.41,6.58c-0.08.35,0.72,0.32,0.5,1.08s-0.77,2.66-1.42,4.39-2.6,5.3-2.06,6a2,2,0,0,0,1.85.26,1,1,0,0,0,.62-1.12c-0.15-.44-0.69,0-0.85-0.42s1.25-3.44,1.81-3.51a8.68,8.68,0,0,1,1.33.39c1,0.19,1.76-.17,1.54.46-0.31.87-4.18,10.35-2,11.81S21.19,24,21.2,23.29s-3.35,1-3.41-.24A49.53,49.53,0,0,1,21,9.54c2.18-5.3,2.87-6.83,1.53-7.69a1.54,1.54,0,0,0-2.36.65c0,0.31,1.42.52,1.11,1.54a60.75,60.75,0,0,1-2.73,7.29,1.89,1.89,0,0,1-2,.82,1.44,1.44,0,0,1-1.19-1.41c0.08-.61,1.67-4.29,1.26-4.71S14.61,5.71,14.41,6.58Z" transform="translate(-0.01 0)" />
-					</svg>
-				</div>
-				<div class="intro">
-					Richard Huynh <br />
-					Creative
-				</div>
-			</div>
+			<h1>
+				<span id="title">Designer Developer</span><br />
+				<span id="name" class="wiggle">
+					RICHARD HUYNH
+				</span>
+			</h1>
 		</div>
+	</header>
+	<div id="mech_wrap">
 	</div>
-	<div id="main">
+	<section id="about">
 		<div class="container">
-			<div id="work">
-			</div>
-		</div>
-	</div>
 
-	<!--Templates-->
-	<div id="templateContainer" class="hidden">
-		<div id="thumbTemplate">
-			<div class="thumb" data-id="[[id]]">
-				<img src="[[thumb]]" />
-				<div class="overlay" style="background:[[overlay]];">
-					<div class="overlay-text">[[tagline]]</div>
-				</div>
-			</div>
 		</div>
-
-		<div id="workOverlayTemplate">
-			<div class="thumb-pointer" data-column="[[column]]"></div>
-			<div class="detail">
-				<div class="text">
-					<h1>[[name]]</h1>
-					<p>[[description]]</p>
-					<p>[[skills]]</p>
-					<p>[[date]]</p>
-				</div>
-				<div class="slides">
-					[[slides]]
-				</div>
-			</div>
-		</div>
-	</div>
-
+	</section>
 
 </body>
 </html>
