--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
 		</svg>
 	</header>
 
-	<!--<section id="about">
+	<section id="about">
 		<div class="container">
 
 		</div>
-	</section>-->
+	</section>
 
 </body>
 </html>
