--- a/index.html
+++ b/index.html
@@ -69,11 +69,63 @@
 		</svg>
 	</header>
 
-	<section id="about">
+	<!--<section id="about">
 		<div class="container">
 
 		</div>
-	</section>
+	</section>-->
+
+	<div class="parallax">
+
+		<div class="clip_wrap">
+		</div>
+
+		<div class="parallax_front">
+			<div class="image_wrap dino_image">
+				<img src="img/work/poster_bw.jpg" class="back" />
+				<img src="img/work/poster.jpg" class="front" />
+			</div>
+		</div>
+
+		<div class="parallax_mid">
+			<section id="dino" class="clip_wrap">
+				<div class="container">
+					<div class="text">
+						<h2>
+							Space Dinosaurs
+						</h2>
+						<!--<h3>
+							Photoshop, Illustration
+						</h3>-->
+					</div>
+				</div>
+			</section>
+
+
+			<div class="image_wrap topdosh_image">
+				<img src="img/work/brochure1.jpg" class="back" />
+				<img src="img/work/brochure2.jpg" class="front" />
+			</div>
+
+		</div>
+
+
+		<div class="parallax_back">
+			<section id="topdosh" class="clip_wrap">
+				<div class="container cf">
+					<div class="content">
+						<div class="text">
+							<h2>
+								Street Wear
+							</h2>
+						</div>
+
+					</div>
+				</div>
+			</section>	
+		</div>
+	</div>
+
 
 </body>
 </html>
