--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
+	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
 	<title>Richard Huynh</title>
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
@@ -75,10 +76,7 @@
 		</div>
 	</section>-->
 
-	<div class="parallax">
-
-		<div class="clip_wrap">
-		</div>
+	<div id="parallax">
 
 		<div class="parallax_front">
 			<div class="image_wrap dino_image">
