--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-	<meta content='width=device-width, user-scalable=0' name='viewport' />
+	<meta content='user-scalable=0' name='viewport' />
 	<title>Richard Huynh</title>
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
@@ -83,6 +83,13 @@
 				<img src="img/work/poster_bw.jpg" class="back" />
 				<img src="img/work/poster.jpg" class="front" />
 			</div>
+
+
+			<div class="image_wrap twenty_image">
+				<img src="img/work/n2020_2.jpg" class="back"/>
+				<img src="img/work/n2020_0.jpg" class="front"/>
+				<img src="img/work/n2020_1.jpg" class="mid" />
+			</div>
 		</div>
 
 		<div class="parallax_mid">
@@ -92,9 +99,11 @@
 						<h2>
 							Space Dinosaurs
 						</h2>
-						<!--<h3>
-							Photoshop, Illustration
-						</h3>-->
+						<h3>
+							Photoshop
+							<br />
+							Illustration
+						</h3>
 					</div>
 				</div>
 			</section>
@@ -105,6 +114,22 @@
 				<img src="img/work/brochure2.jpg" class="front" />
 			</div>
 
+
+			<section id="twenty" class="clip_wrap">
+				<div class="container">
+					<div class="text">
+						<h2>
+							2020
+						</h2>
+						<h3>
+							After Effects
+							<br />
+							Photoshop
+							<br />
+						</h3>
+					</div>
+				</div>
+			</section>
 		</div>
 
 
@@ -114,10 +139,16 @@
 					<div class="content">
 						<div class="text">
 							<h2>
-								Street Wear
+								Topdosh
 							</h2>
+							<h3>
+								Graphic Design
+								<br />
+								Typography
+								<br />
+								Illustrator
+							</h3>
 						</div>
-
 					</div>
 				</div>
 			</section>	
