--- a/index.html
+++ b/index.html
@@ -75,86 +75,102 @@
 
 		</div>
 	</section>-->
-
-	<div id="parallax">
-
-		<div class="parallax_front">
-			<div class="image_wrap dino_image">
-				<img src="img/work/poster_bw.jpg" class="back" />
-				<img src="img/work/poster.jpg" class="front" />
-			</div>
-
-
-			<div class="image_wrap twenty_image">
-				<img src="img/work/n2020_2.jpg" class="back"/>
-				<img src="img/work/n2020_0.jpg" class="front"/>
-				<img src="img/work/n2020_1.jpg" class="mid" />
-			</div>
-		</div>
-
-		<div class="parallax_mid">
-			<section id="dino" class="clip_wrap">
-				<div class="container">
-					<div class="text">
-						<h2>
-							Space Dinosaurs
-						</h2>
-						<h3>
-							Photoshop
-							<br />
-							Illustration
-						</h3>
-					</div>
+		<div id="parallax">
+			<div class="parallax_front">
+				<div class="image_wrap dino_image">
+					<img src="img/work/poster_bw.jpg" class="back" />
+					<img src="img/work/poster.jpg" class="front" />
 				</div>
-			</section>
 
+				<div class="image_wrap topdosh_image">
+					<img src="img/work/brochure1.jpg" class="back" />
+					<img src="img/work/brochure2.jpg" class="front" />
+				</div>
 
-			<div class="image_wrap topdosh_image">
-				<img src="img/work/brochure1.jpg" class="back" />
-				<img src="img/work/brochure2.jpg" class="front" />
+				<div class="image_wrap twenty_image">
+					<img src="img/work/n2020_2.jpg" class="back" />
+					<img src="img/work/n2020_0.jpg" class="front" />
+					<img src="img/work/n2020_1.jpg" class="mid" />
+				</div>
+
+				<div class="image_wrap fitness_image">
+					<img src="img/work/fitness.jpg" />
+				</div>
 			</div>
 
-
-			<section id="twenty" class="clip_wrap">
-				<div class="container">
-					<div class="text">
-						<h2>
-							2020
-						</h2>
-						<h3>
-							After Effects
-							<br />
-							Photoshop
-							<br />
-						</h3>
-					</div>
-				</div>
-			</section>
-		</div>
-
-
-		<div class="parallax_back">
-			<section id="topdosh" class="clip_wrap">
-				<div class="container cf">
-					<div class="content">
+			<div class="parallax_mid">
+				<section id="dino" class="container_wrap">
+					<div class="container">
 						<div class="text">
 							<h2>
-								Topdosh
+								Space Dinosaurs
 							</h2>
 							<h3>
-								Graphic Design
+								Photoshop
 								<br />
-								Typography
-								<br />
-								Illustrator
+								Illustration
 							</h3>
 						</div>
 					</div>
-				</div>
-			</section>	
-		</div>
-	</div>
+				</section>
 
+				<section id="twenty" class="container_wrap">
+					<div class="container">
+						<div class="text">
+							<h2>
+								2020
+							</h2>
+							<h3>
+								After Effects
+								<br />
+								Photoshop
+								<br />
+							</h3>
+						</div>
+					</div>
+				</section>
+			</div>
+
+			<div class="parallax_back">
+				<section id="topdosh" class="container_wrap">
+					<div class="container cf">
+						<div class="content">
+							<div class="text">
+								<h2>
+									Topdosh
+								</h2>
+								<h3>
+									Graphic Design
+									<br />
+									Typography
+									<br />
+									Illustrator
+								</h3>
+							</div>
+						</div>
+					</div>
+				</section>
+
+				<section id="fitness" class="container_wrap">
+					<div class="container cf">
+						<div class="content">
+							<div class="text">
+								<h2>
+									+1 Str Fitness
+								</h2>
+								<h3>
+									Motion Graphics
+									<br />
+									After Effects
+								</h3>
+							</div>
+						</div>
+					</div>
+				</section>
+			</div>
+
+
+		</div>
 
 </body>
 </html>
