--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<script src="js/app.js"></script>
 
 </head>
-<body>
+<body id="body">
 	<header>
 		<div id="mech_wrap">
 		</div>
@@ -69,108 +69,100 @@
 			<polygon points="100,100 100,93.7 50,100" data-poly="15"></polygon>
 		</svg>
 	</header>
-
-	<!--<section id="about">
-		<div class="container">
-
-		</div>
-	</section>-->
-		<div id="parallax">
-			<div class="parallax_front">
-				<div class="image_wrap dino_image">
-					<img src="img/work/poster_bw.jpg" class="back" />
-					<img src="img/work/poster.jpg" class="front" />
-				</div>
-
-				<div class="image_wrap topdosh_image">
-					<img src="img/work/brochure1.jpg" class="back" />
-					<img src="img/work/brochure2.jpg" class="front" />
-				</div>
-
-				<div class="image_wrap twenty_image">
-					<img src="img/work/n2020_2.jpg" class="back" />
-					<img src="img/work/n2020_0.jpg" class="front" />
-					<img src="img/work/n2020_1.jpg" class="mid" />
-				</div>
-
-				<div class="image_wrap fitness_image">
-					<img src="img/work/fitness.jpg" />
-				</div>
+	<div id="work">
+			<div class="image_wrap dino_image">
+				<img src="img/work/poster_bw.jpg" class="back" />
+				<img src="img/work/poster.jpg" class="front" />
 			</div>
 
-			<div class="parallax_mid">
-				<section id="dino" class="container_wrap">
-					<div class="container">
+			<section id="dino" class="container_wrap">
+				<div class="container">
+					<div class="text">
+						<h2>
+							Space Dinosaurs
+						</h2>
+						<h3>
+							Photoshop
+							<br />
+							Illustration
+						</h3>
+					</div>
+				</div>
+			</section>
+
+			<div class="image_wrap topdosh_image">
+				<img src="img/work/brochure1.jpg" class="back" />
+				<img src="img/work/brochure2.jpg" class="front" />
+			</div>
+
+			<section id="topdosh" class="container_wrap">
+				<div class="container cf">
+					<div class="content">
 						<div class="text">
 							<h2>
-								Space Dinosaurs
+								Topdosh
 							</h2>
 							<h3>
-								Photoshop
+								Graphic Design
 								<br />
-								Illustration
+								Typography
+								<br />
+								Illustrator
 							</h3>
 						</div>
 					</div>
-				</section>
+				</div>
+			</section>
 
-				<section id="twenty" class="container_wrap">
-					<div class="container">
+			<div class="image_wrap twenty_image">
+				<img src="img/work/n2020_2.jpg" class="back" />
+				<img src="img/work/n2020_1.jpg" class="front" />
+			</div>
+
+			<section id="twenty" class="container_wrap">
+				<div class="container">
+					<div class="text">
+						<h2>
+							2020
+						</h2>
+						<h3>
+							After Effects
+							<br />
+							Photoshop
+							<br />
+						</h3>
+					</div>
+				</div>
+			</section>
+
+
+			<div class="image_wrap fitness_image">
+				<img src="img/work/fitness.jpg" />
+			</div>
+
+			<section id="fitness" class="container_wrap">
+				<div class="container cf">
+					<div class="content">
 						<div class="text">
 							<h2>
-								2020
+								+1 Str Fitness
 							</h2>
 							<h3>
+								Motion Graphics
+								<br />
 								After Effects
-								<br />
-								Photoshop
-								<br />
 							</h3>
 						</div>
 					</div>
-				</section>
-			</div>
-
-			<div class="parallax_back">
-				<section id="topdosh" class="container_wrap">
-					<div class="container cf">
-						<div class="content">
-							<div class="text">
-								<h2>
-									Topdosh
-								</h2>
-								<h3>
-									Graphic Design
-									<br />
-									Typography
-									<br />
-									Illustrator
-								</h3>
-							</div>
-						</div>
-					</div>
-				</section>
-
-				<section id="fitness" class="container_wrap">
-					<div class="container cf">
-						<div class="content">
-							<div class="text">
-								<h2>
-									+1 Str Fitness
-								</h2>
-								<h3>
-									Motion Graphics
-									<br />
-									After Effects
-								</h3>
-							</div>
-						</div>
-					</div>
-				</section>
-			</div>
+				</div>
+			</section>
 
 
-		</div>
-
+			<footer>
+				<div class="container">
+					Richard
+				</div>
+			</footer>
+	</div>
 </body>
 </html>
