--- a/reach-brochure.html
+++ b/reach-brochure.html
@@ -66,23 +66,27 @@
 						<b>Assorted</b>
 					</div>
 				</div>
-				<div class="cf">
+				<div  class="cf">
 					<ul id="work_gallery">
-						<li data-src="img/gallery/fyaw_full.jpg"
-							data-sub-html="REACH - Foster Youth Awareness Week Flyer">
-							<img src="img/gallery/fyaw_640.jpg" />
+						<li data-responsive="img/gallery-full/Reach_Flyer_FYAW.jpg 800"
+							data-src="img/gallery-full/Reach_Flyer_FYAW.jpg"
+							data-sub-html="Reach - Foster Youth Awareness Flyer">
+							<img src="img/gallery-full/Reach_Flyer_FYAW.jpg" />
 						</li>
-						<li data-src="img/gallery/topdosh_full.jpg"
-							data-sub-html="Conceptual Streetwear Style Guide Brochure">
-							<img src="img/gallery/topdosh_640.jpg" />
+						<li  data-responsive="img/gallery-full/Reach_Flyer_FYAW.jpg 800" 
+								 data-src="img/gallery-full/Reach_Flyer_FYAW.jpg" 
+								 data-sub-html="Reach - Foster Youth Awareness Flyer">
+							<img src="img/gallery-full/Reach_Flyer_FYAW.jpg" />
 						</li>
-						<li data-src="img/gallery/dino_full.jpg" 
-								 data-sub-html="Illustrated Dinosaur Poster">
-							<img src="img/gallery/dino_640.jpg" />
+						<li data-responsive="img/gallery-full/Reach_Flyer_FYAW.jpg 800"
+							data-src="img/gallery-full/Reach_Flyer_FYAW.jpg"
+							data-sub-html="Reach - Foster Youth Awareness Flyer">
+							<img src="img/gallery-full/Reach_Flyer_FYAW.jpg" />
 						</li>
-						<li data-src="img/gallery/twin_full.jpg"
-							data-sub-html="REACH - Illustrated 2-piece Flyer Set">
-							<img src="img/gallery/twin_640.jpg" />
+						<li data-responsive="img/gallery-full/Reach_Flyer_FYAW.jpg 800"
+							data-src="img/gallery-full/Reach_Flyer_FYAW.jpg"
+							data-sub-html="Reach - Foster Youth Awareness Flyer">
+							<img src="img/gallery-full/Reach_Flyer_FYAW.jpg" />
 						</li>
 					</ul>
 
@@ -95,22 +99,17 @@
 
 	<footer class="outer">
 		<div class="inner">
-			<div class="section_header_container cf">
-				<div class="section_header_left">
-					<a class="title" href="#"><b>Richard Huynh</b></a>
-				</div>
-				<div class="section_header_right">
-					<nav class="nav-social cf">
-						<a href="https://www.linkedin.com/in/richhuynh">
-							<i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i>
-						</a>
-						<a href="https://github.com/richhyaa">
-							<i class="fa fa-github-square fa-2x" aria-hidden="true"></i>
-						</a>
-					</nav>
-				</div>
-			</div>
-
+			<h1>
+				Richard Huynh
+			</h1>
+			<nav class="nav-social">
+				<a href="https://www.linkedin.com/in/richhuynh">
+					<i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i>
+				</a>
+				<a href="https://github.com/richhyaa">
+					<i class="fa fa-github-square fa-2x" aria-hidden="true"></i>
+				</a>
+			</nav>
 		</div>
 
 	</footer>
