--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 		<header class="outer">
 			<div class="inner">
-				RICHARD HUYNH
+				RICHARD HUYNH - UNDER CONSTRUCTION
 			</div>
 		</header>
 
