--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta name="description" content="Richard Huynh: Designer/Developer">
-	<meta content='user-scalable=0' name='viewport' />
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Richard Huynh</title>
 
 	<!--Vendor-->
@@ -44,7 +44,7 @@
 				<div class="section_header_container cf">
 					<div class="section_header_left">
 						<b>Featured Work</b><br/>
-						<a class="featured_link" href="page/reach-brochure.html">See Process</a>
+						<a class="featured_link" href="reach-brochure.html">See Process</a>
 					</div>
 					<div class="section_header_right">
 						<b>REACH</b><br />
