--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 					</div>
 				</div>
 				<div class="featured_image">
+					<img src="img/reach_brochure/preview.jpg" />
 				</div>
 			</div>
 		</section>
@@ -66,27 +67,25 @@
 						<b>Assorted</b>
 					</div>
 				</div>
-				<div class="cf">
-					<ul id="work_gallery">
-						<li data-src="img/gallery/fyaw_full.jpg"
-							data-sub-html="REACH - Foster Youth Awareness Week Flyer">
-							<img src="img/gallery/fyaw_640.jpg" />
-						</li>
-						<li data-src="img/gallery/topdosh_full.jpg"
-							data-sub-html="Conceptual Streetwear Style Guide Brochure">
-							<img src="img/gallery/topdosh_640.jpg" />
-						</li>
-						<li data-src="img/gallery/dino_full.jpg" 
-								 data-sub-html="Illustrated Dinosaur Poster">
-							<img src="img/gallery/dino_640.jpg" />
-						</li>
-						<li data-src="img/gallery/twin_full.jpg"
-							data-sub-html="REACH - Illustrated 2-piece Flyer Set">
-							<img src="img/gallery/twin_640.jpg" />
-						</li>
-					</ul>
+				<ul id="work_gallery" class="gallery cf">
+					<li data-src="img/gallery/fyaw_full.jpg"
+						data-sub-html="REACH Foster Youth Awareness Week Flyer">
+						<img src="img/gallery/fyaw_640.jpg" />
+					</li>
+					<li data-src="img/gallery/topdosh_full.jpg"
+						data-sub-html="Conceptual Streetwear Style Guide Brochure">
+						<img src="img/gallery/topdosh_640.jpg" />
+					</li>
+					<li data-src="img/gallery/dino_full.jpg"
+						data-sub-html="Illustrated Dinosaur Poster">
+						<img src="img/gallery/dino_640.jpg" />
+					</li>
+					<li data-src="img/gallery/twin_full.jpg"
+						data-sub-html="REACH - Illustrated 2-piece Flyer Set">
+						<img src="img/gallery/twin_640.jpg" />
+					</li>
+				</ul>
 
-				</div>
 
 			</div>
 		</section>
@@ -97,7 +96,7 @@
 		<div class="inner">
 			<div class="section_header_container cf">
 				<div class="section_header_left">
-					<a class="title" href="#"><b>Richard Huynh</b></a>
+					<a class="title" href="index.html"><b>Richard Huynh</b></a>
 				</div>
 				<div class="section_header_right">
 					<nav class="nav-social cf">
