--- a/reach-brochure.html
+++ b/reach-brochure.html
@@ -31,51 +31,141 @@
 	</div>
 
 
-	<div id="page_container">
-
+	<div id="page_process">
+		<div id="background_display"></div>
 		<header class="outer">
 			<div class="inner">
-				RICHARD HUYNH
+				<a href="index.html">Back to Home</a>
+				<h1>REACH Brochure Revision</h1>
+				<br />
+				<h3>Requirements and Goals</h3>
+				<ul>
+					<li>Tri-Fold Brochure 8.5in x 11in</li>
+					<li>Primary color must be blue.</li>
+					<li>Appeal to college students, but still appear professional.</li>
+					<li>Establish positive, hopeful, welcoming feel.</li>
+					<li>Include lots of photos.</li>
+				</ul>
 			</div>
 		</header>
 
-		<section id="featured" class="outer">
-			<div class="inner">
-			</div>
-		</section>
+		<div id="process_main">
+			<div class="outer cf">
+				<div class="inner">
 
-		<section id="work" class="outer">
-			<div class="inner">
-				<div class="section_header_container cf">
-					<div class="section_header_left">
-						<b>Work</b>
-					</div>
-					<div class="section_header_right">
-						<b>Assorted</b>
-					</div>
+					<section class="process_outer left cf">
+						<div class="process_inner">
+							<div class="process_header cf">
+								<h2>1</h2>
+								<h3>Moodboard</h3>
+							</div>
+							<div class="process_content cf">
+
+								<p>I sought inspiration from baseball and school-based cartoons.</p>
+								<img class="moodboard" src="img/reach_brochure/moodboard_720.jpg" />
+
+							</div>
+						</div>
+					</section>
+
+
+					<section class="process_outer right cf">
+						<div class="process_inner ">
+							<div class="process_header cf">
+								<h2>2</h2>
+								<h3>Sketch</h3>
+							</div>
+							<div class="process_content cf">
+
+								<p>I sought inspiration from baseball and school-based cartoons.</p>
+								<img class="moodboard" src="img/reach_brochure/moodboard_720.jpg" />
+
+							</div>
+						</div>
+					</section>
+
+
+
+					<section class="process_outer left cf">
+						<div class="process_inner">
+							<div class="process_header cf">
+								<h2>3</h2>
+								<h3>Custom Typography</h3>
+							</div>
+							<div class="process_content cf">
+								<p>
+									I worked on creating a custom typographic asset for their brand. The design is inspired by baseball team typography.
+								</p>
+								<img class="moodboard" src="img/reach_brochure/moodboard_720.jpg" />
+
+							</div>
+						</div>
+					</section>
+
+					<section class="process_outer right cf">
+						<div class="process_inner">
+							<div class="process_header cf">
+								<h2>4</h2>
+								<h3>Photography</h3>
+							</div>
+							<div class="process_content cf">
+
+								<p>I took photos at various REACH events. The focus was to capture genuine, positive human interaction.</p>
+								<ul id="featured_photo_gallery" class="gallery cf">
+									<li data-src="img/reach_brochure/photos/counsel.jpg"
+										data-sub-html="REACH Counseling">
+										<img src="img/reach_brochure/photos/counsel_640.jpg" />
+									</li>
+									<li data-src="img/reach_brochure/photos/award.jpg"
+										data-sub-html="REACH Awards Stage">
+										<img src="img/reach_brochure/photos/award_640.jpg" />
+									</li>
+									<li data-src="img/reach_brochure/photos/dinner.jpg"
+										data-sub-html="REACH Awards Dinner">
+										<img src="img/reach_brochure/photos/dinner_640.jpg" />
+									</li>
+									<li data-src="img/reach_brochure/photos/food.jpg"
+										data-sub-html="REACH Foster Youth Awareness Week BBQ">
+										<img src="img/reach_brochure/photos/food_640.jpg" />
+									</li>
+
+								</ul>
+
+
+							</div>
+						</div>
+					</section>
+
+
+
 				</div>
 			</div>
-		</section>
+
+		</div>
 	</div>
 
 
 	<footer class="outer">
 		<div class="inner">
-			<h1>
-				Richard Huynh
-			</h1>
-			<nav class="nav-social">
-				<a href="https://www.linkedin.com/in/richhuynh">
-					<i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i>
-				</a>
-				<a href="https://github.com/richhyaa">
-					<i class="fa fa-github-square fa-2x" aria-hidden="true"></i>
-				</a>
-			</nav>
+			<div class="section_header_container cf">
+				<div class="section_header_left">
+					<a class="title" href="index.html"><b>Richard Huynh</b></a>
+				</div>
+				<div class="section_header_right">
+					<nav class="nav-social cf">
+						<a href="https://www.linkedin.com/in/richhuynh">
+							<i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i>
+						</a>
+						<a href="https://github.com/richhyaa">
+							<i class="fa fa-github-square fa-2x" aria-hidden="true"></i>
+						</a>
+					</nav>
+				</div>
+			</div>
+
 		</div>
 
 	</footer>
-
 
 	<!--JS-->
 	<script src="js/vendor/jquery.min.js"></script>
