--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 						<b>Assorted</b>
 					</div>
 				</div>
-				<ul id="work_gallery" class="gallery cf">
+				<ul id="work_gallery" class="gallery gallery-4 cf">
 					<li data-src="img/gallery/fyaw_full.jpg"
 						data-sub-html="REACH Foster Youth Awareness Week Flyer">
 						<img src="img/gallery/fyaw_640.jpg" />
