--- a/reach-brochure.html
+++ b/reach-brochure.html
@@ -32,7 +32,9 @@
 
 
 	<div id="page_process">
-		<div id="background_display"></div>
+		<div id="process_hero" >
+			<img src="img/reach_brochure/brochure_top.jpg" />
+		</div>
 		<header class="outer">
 			<div class="inner">
 				<a href="index.html">Back to Home</a>
@@ -53,92 +55,106 @@
 			<div class="outer cf">
 				<div class="inner">
 
-					<section class="process_outer left cf">
-						<div class="process_inner">
-							<div class="process_header cf">
-								<h2>1</h2>
-								<h3>Moodboard</h3>
-							</div>
-							<div class="process_content cf">
+					<section class="process_section cf">
+						<div class="process_section_title">
+							<h2>Conceptualization</h2>
+						</div>
 
-								<p>I sought inspiration from baseball and school-based cartoons.</p>
-								<img class="moodboard" src="img/reach_brochure/moodboard_720.jpg" />
+						<div class="process_outer left cf">
+							<div class="process_inner">
+								<div class="process_header cf">
+									<div class="process_step">1</div>
+									<div class="process_title">Moodboard</div>
+								</div>
+								<div class="process_content cf">
 
+									<p>I sought inspiration from baseball and school-based cartoons.</p>
+									<img class="moodboard" src="img/reach_brochure/moodboard_720.jpg" />
+
+								</div>
 							</div>
 						</div>
-					</section>
 
 
-					<section class="process_outer right cf">
-						<div class="process_inner ">
-							<div class="process_header cf">
-								<h2>2</h2>
-								<h3>Sketch</h3>
-							</div>
-							<div class="process_content cf">
+						<div class="process_outer right cf">
+							<div class="process_inner ">
+								<div class="process_header cf">
+									<div class="process_step">1</div>
+									<div class="process_title">Compositional Sketch</div>
+								</div>
+								<div class="process_content cf">
 
-								<p>I sought inspiration from baseball and school-based cartoons.</p>
-								<img class="moodboard" src="img/reach_brochure/moodboard_720.jpg" />
+									<p>I sought inspiration from baseball and school-based cartoons.</p>
+									<img class="moodboard" src="img/reach_brochure/moodboard_720.jpg" />
 
-							</div>
-						</div>
-					</section>
-
-
-
-					<section class="process_outer left cf">
-						<div class="process_inner">
-							<div class="process_header cf">
-								<h2>3</h2>
-								<h3>Custom Typography</h3>
-							</div>
-							<div class="process_content cf">
-								<p>
-									I worked on creating a custom typographic asset for their brand. The design is inspired by baseball team typography.
-								</p>
-								<img class="moodboard" src="img/reach_brochure/moodboard_720.jpg" />
-
-							</div>
-						</div>
-					</section>
-
-					<section class="process_outer right cf">
-						<div class="process_inner">
-							<div class="process_header cf">
-								<h2>4</h2>
-								<h3>Photography</h3>
-							</div>
-							<div class="process_content cf">
-
-								<p>I took photos at various REACH events. The focus was to capture genuine, positive human interaction.</p>
-								<ul id="featured_photo_gallery" class="gallery cf">
-									<li data-src="img/reach_brochure/photos/counsel.jpg"
-										data-sub-html="REACH Counseling">
-										<img src="img/reach_brochure/photos/counsel_640.jpg" />
-									</li>
-									<li data-src="img/reach_brochure/photos/award.jpg"
-										data-sub-html="REACH Awards Stage">
-										<img src="img/reach_brochure/photos/award_640.jpg" />
-									</li>
-									<li data-src="img/reach_brochure/photos/dinner.jpg"
-										data-sub-html="REACH Awards Dinner">
-										<img src="img/reach_brochure/photos/dinner_640.jpg" />
-									</li>
-									<li data-src="img/reach_brochure/photos/food.jpg"
-										data-sub-html="REACH Foster Youth Awareness Week BBQ">
-										<img src="img/reach_brochure/photos/food_640.jpg" />
-									</li>
-
-								</ul>
-
-
+								</div>
 							</div>
 						</div>
 					</section>
 
 
 
-				</div>
+
+					<section class="process_section cf">
+
+						<div class="process_section_title">
+							<h2>Produce Assets</h2>
+						</div>
+
+						<div class="process_outer left cf">
+							<div class="process_inner">
+								<div class="process_header cf">
+									<div class="process_step">1</div>
+									<div class="process_title">Custom Typography</div>
+								</div>
+								<div class="process_content cf">
+									<p>
+										I worked on creating a custom typographic asset for their brand. The design is inspired by baseball team typography.
+									</p>
+									<img class="moodboard" src="img/reach_brochure/moodboard_720.jpg" />
+
+								</div>
+							</div>
+						</div>
+
+						<div class="process_outer right cf">
+							<div class="process_inner">
+								<div class="process_header cf">
+									<div class="process_step">1</div>
+									<div class="process_title">Photography</div>
+								</div>
+								<div class="process_content cf">
+
+									<p>I took photos at various REACH events. The focus was to capture genuine, positive human interaction.</p>
+									<ul id="featured_photo_gallery" class="gallery cf">
+										<li data-src="img/reach_brochure/photos/counsel.jpg"
+											data-sub-html="REACH Counseling">
+											<img src="img/reach_brochure/photos/counsel_640.jpg" />
+										</li>
+										<li data-src="img/reach_brochure/photos/award.jpg"
+											data-sub-html="REACH Awards Stage">
+											<img src="img/reach_brochure/photos/award_640.jpg" />
+										</li>
+										<li data-src="img/reach_brochure/photos/dinner.jpg"
+											data-sub-html="REACH Awards Dinner">
+											<img src="img/reach_brochure/photos/dinner_640.jpg" />
+										</li>
+										<li data-src="img/reach_brochure/photos/food.jpg"
+											data-sub-html="REACH Foster Youth Awareness Week BBQ">
+											<img src="img/reach_brochure/photos/food_640.jpg" />
+										</li>
+
+									</ul>
+
+
+								</div>
+							</div>
+						</div>
+					</section>
+
+
+
+</div>
 			</div>
 
 		</div>
